tests/NormalTests/paczka1/small_fuzzy/90693945.err
Error in line 3: yyA6bn2A A566 44,7
Error in line 6: 2kIN3ZXw A566 1,3
